  object contains members of a specified set
- New function bcheck(): aids in handling bundle arguments
  to user-defined functions
- New command "panspec": substantially, the old "hausman"
  command under a different name; for the moment, "hausman"
  is still kept as an alias for backward compatibility
- fcstats() matrix row labels: distinguish U1 vs U2 variant
  of Theil's U statistic
- printing of bundles: sort members by type and key
- "print" command: make more flexible, it now includes
  most of the functionality of "eval"
- "var" command with --lagselect option: add a --minlag
  option to allow testing against 0 lags, or imposing the
  assumption that at least p > 1 lags are needed
- "set" command: new variable "datacols" to control the max
  number of series to print side by side
- "foreign" command mechanism: updates to support version
  4.1.0 of R and version 8.0 of Ox Console
- GUI: introduce experimental "plot collection"
- GUI: add option to use the tab key as the trigger for
  autocompletion in the script editor and console
- GUI: add command-line options: --new to start a new gretl
  instance unconditionally and --single to use a single
  program instance unconditionally
- GUI script editor: make the Find box appear at the foot of
  the window, not in a separate dialog
- GUI: provide larger (24 pixel) toolbar icons for use on
  small, high-density displays in particular
- GUI: numerous other small fixes and enhancements
- MS Windows, 64-bit: update to gnuplot 5.4.1, patched to
  avoid too-big fonts on Windows with Ultra HD display
- Fix bug: spurious results from "system" command in case of
  exact collinearity
- Fix bug: spurious reduction of the sample range in the grid
  variant of "panplot" with some patterns of missing values
- Fix bug: wrong results from the polyfit() function when
  applied to panel data
- Numerous additional small big fixes
- Internals: make "libset" code more compact and efficient